--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,18 +2,54 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="./css/main.css"
 </head>
 <body>
-  Instagram
+  <header>
+      <img class="brand" src="./images/brand.png" alt="brand">
+    <div class="login">
+      <img class="" src="./images/home.png" alt="home">
+      <span>Log in</span>
+    </div>
+  </header>  
 
-  Capture and Share the World's Moments
+  <div class="iphone">
+      <img src="./images/phones.png" alt="iphone">
+  </div>
+  
+  <main>
+    <section class="sectiontext">
+     <h1 class="fontcolor wrap-h1">Capture and Share the World's Moments</h1>
+      <p>  Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
+        </p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy.
+       You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+      <p>Oh yeah, did we mention it's free?
+        </p>
+    <div class="downloadspic">
+      <img src="./images/badge-iphone.png" alt="iphone">
+      <img src="./images/badge-android.png" alt="android">
+    </div>
+    </section>
+  </main>  
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <footer class="footer-container">
+    <ul class="list-center">
+      <li>About us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+    </ul>
+  </footer>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
-
+  
+<!-- 
   Download on the App Store
   Get it on Google Play
 
@@ -26,6 +62,6 @@
   Privacy
   Terms
 
-  &copy; 2014 Instagram
+  &copy; 2014 Instagram -->
 </body>
 </html>
