--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -43,17 +43,20 @@
    
 <footer>
   
-  <div class="links">
-   Support
-   Blog
-   Press
-   API
-   Jobs
-   Privacy
-   Terms
-   <div class="insta"> &copy; 2014 Instagram  </div>  
+  <ul>
+  <li><a href="#">About Us</a></li>
+  <li><a href="#">Support</a></li>
+  <li><a href="#">Blog</a></li>
+  <li><a href="#">Press</a></li>
+  <li><a href="#">API</a></li>
+  <li><a href="#">Jobs</a></li>
+  <li><a href="#">Privacy</a></li>
+  <li><a href="#">Terms</a></li>
+  <li><a href="#"><span link="insta">&copy;2014 Instagram</a></span></li>
+  </ul>
+   
   
-  </div> 
+
   
 </footer>
 
