--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,48 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css\main.css">
 </head>
 <body>
-  Instagram
+  <div id="container">
+    <div id="top-content">
+        <div id="phone-image">
+          <img src="images\phones.png">
+        </div>
 
-  Capture and Share the World's Moments
+        <div id="logo">
+            <div class ="logo-image"><img src="images\brand.png"></div>
+            <div class="login-btn"><a href="#">Log in</a></div>
+        </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <div id="description">            
+            <h2>Capture and Share<br>the World's Moments</h2>
+            <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+        </div>
+    </div> 
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div id="bottom-content">
+       <div id = "buttons">
+           <a href="#" class="img-apps"><img src="images\badge-iphone.png"></a>
+           <a href="#" class="img-apps"><img src="images\badge-android.png"></a>
+       </div>       
+    </div>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <footer>
+        <ul id="links">
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+        </ul>
+        <span class="copyright">&copy; 2014 Instagram</span>
+    </footer>          
+  </div>
 </body>
 </html>
