--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,64 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
-  <link rel="stylesheet" href="css/main.css">
+  <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
 </head>
 
 <body>
-  <header></header> 
+  <div id="blue">
+    <img class="logo" src="../starter-code/images/brand.png" alt="instagram logo">
 
-<section>
-  <img src="images/phones.png" alt="">
-</section>
-    
-    <aside>
-      <img src="images/frame.png" alt="">
-    </aside>
+    <button class="home">
+      <img src="../starter-code/images/home.png" alt="home">Log In</button>
+  </div>
 
-   <article>
+  <div class="phones">
+    <img src="../starter-code/images/phones.png" alt="">
+  </div>
 
-    <img src="file:///Users/francovargas/Desktop/IRONHACK/week1/day2/lab-css-instagram-clone/starter-code/images/brand.png" alt="">
+  <div>
 
-     <h3>Capture and Share the World's Moments</h3>
+      <div class= "contenido">
 
-      <p>Instagram is a fast, beautiful and fun way to share your life with 
-          friends and family.
-    </p>
+        <div class= "titulo">
+            <h2>Capture and Share the World's Moments</h2>
+        </div>
 
-      <p>Take a picture or video, choose a filter to transform its look
-    and feel, then post to Instagram &mdash; it's that easy. You can
-    even share to Facebook, Twitter, Tumblr and more. It's a
-    new way to see the world.
-    </p>
+        <div class="texto">
+          <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong>  way to share your life with friends and family.
+          </p>
 
-      <p>Oh yeah, did we mention it's free? 
-    </p>
-  </article>
+          <p>Take a picture or video, choose a filter to transform its look
+            and feel, then post to instagram - it's that easy. you can 
+            even share to Facebook, Twitte, Tumblr and more. it's a 
+            new way to to see the world.</p>
 
-          <div class:"descargas">
+          <p>Oh yeah, did we mention it's free?</p>
+        </div>
+        <br>
+        <div class="badges">
+          <img src="../starter-code/images/badge-iphone.png" alt="appstore">
+          <img src="../starter-code/images/badge-android.png" alt="playstore">
+        </div>
+
+      </div>
+
+  </div>
+
+  <div class= "footer" style="s" >
+
+    <span><strong>ABOUT US</strong></span>
+    <span><strong>SUPPORT</strong></span>
+    <span><strong>BLOG</strong></span>
+    <span><strong>PRESS</strong></span>
+    <span><strong>API</strong> </span>
+    <span><strong>JOBS</strong></span>
+    <span><strong>PRIVACY</strong></span>
+    <span><strong>TERMS</strong></span>
+    <span class="©"><strong>©2014 INSTAGRAM</strong></span>
   
-            <p> Download on the 
-            App Store</p>
-            <p>Get it on 
-            Google Play</p>
-          </div>
- 
- 
+  </div> 
   
-  
-<footer class="pie">
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-  </footer>
-
-
-  &copy; 2014 Instagram
-  </body>
+</body>
 </html>
+
