--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,77 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div id="instagram-presentation">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="left-section col col-40">
+      <img src="images/phones.png" alt="phone">
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="right-section info-section col col-60">
 
-  Oh yeah, did we mention it's free?
+      <div class="wrapper">
+        <img src="images/brand.png" alt="Instagram Logo">
+        <button>
+          <img src="images/home.png">
+          <span>Log in</span>
+        </button>
+      </div>
 
-  Download on the App Store
-  Get it on Google Play
+      <div id="instagram-intro-box" class="box">
+        <h4>
+          Capture and Share the World's Moments
+        </h4>
+  
+        <p>
+            Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+        </p>
+  
+        <p>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+  
+        <p>
+            Oh yeah, did we mention it's free?
+        </p>
+  
+        <div class="wrapper">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+          <a href="">
+            <img src="images/badge-iphone.png" class="download-button button-left" alt="App Store Download button">
+          </a>
+          <a href="">
+            <img src="images/badge-android.png" class="download-button" alt="Google Play Download button">
+          </a>
 
-  &copy; 2014 Instagram
+        </div>
+        Download on the App Store
+        Get it on Google Play
+  
+      </div>
+
+    </div>
+
+    <div class="footer">
+      
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+  
+      <span>&copy; 2014 Instagram</span>
+  
+    </div>
+    
+  </div>
+
+
 </body>
 </html>
