--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
+
 <body>
-  Instagram
+  <div class="container-content">
+    <div class="instagram-content">
+      <img src="./images/phones.png"></img>
+      <div class="instagram-main-content">
+        <div>
+          <div class="header-content">
+            <img src="./images/brand.png">
+            <button class="button-loggin">
+              <img src="./images/home.png">
+              <span>Log in</span>
+            </button>
+          </div>
+          <div class="main-content">
+            <h2>Capture and Share the World's Moments</h2>
+            <p>Instagram is a
+              <b>fast</b>,
+              <b>beautiful</b> and
+              <b>fun</b> way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filt∫er to transform its look and feel, then post to Instagram &mdash; it's
+              that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <div class="shops">
+              <button class="ios-button"></button>
+              <button class="google-button"></button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <a href="">About Us</a>
+      <a href="">Support</a>
+      <a href="">Blog</a>
+      <a href="">Press</a>
+      <a href="">API</a>
+      <a href="">Jobs</a>
+      <a href="">Privacy</a>
+      <a href="">Terms</a>
+      &copy; 2014 Instagram
+    </div>
+  </div>
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
+
 </html>
