--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container-content">
     <div class="instagram-content">
-      <img src="./images/phones.png"></img>
+      <img src="./images/phones.png">
       <div class="instagram-main-content">
         <div>
           <div class="header-content">
