WebPT done Hugo Iván Sánchez Rodríguez

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,50 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="blueBar">
+    <div class="phone">
+      <img src="images/phones.png" alt="">
+    </div>
+    <div class="loginBar">
+      <img src="images/brand.png" alt="">
+      <button class="loginButton">
+      <img src="images/home.png" alt="" class="home">
+        <p class="login">Log in</p>
+      </button>
+    </div>
+    <div class="descriptionBox">
+      <p class="slogan">
+         Capture and Share the World's Moments
+      </p>
+      <p class="description">
+          <br>
+          Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+          <br><br>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <br><br>
+          Oh yeah, did we mention it's free?
+      </p>
+      <img src="images/badge-iphone.png" alt="" class="imgIphone">
+      <img src="images/badge-android.png" alt="" class="imgAndroid">
+    </div>
+  </div>
+  <div class="infoBar">
+    <table>
+      <tr>
+          <th>About Us</th>
+          <th>Support</th>
+          <th>Blog</th>
+          <th>Press</th>
+          <th>API</th>
+          <th>Jobs</th>
+          <th>Privacy</th>
+          <th>Terms</th>
+          <th style="color: gray;">&copy; 2014 Instagram</th>
+        </tr>
+    </table>
+  </div>  
 </body>
 </html>
