--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,46 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <div class="absolute box"></div>
+    <div class="absolute mainelment">
+        <img class="phoneimage" src="images/phones.png" alt="">
+        <div class="absolute home">
+        
+            <img id="brand" src="images/brand.png" alt="">
+            <button class="button" type="button">
+              <img src="images/home.png" alt="">
+              <span>Log in</span>
+            </button>
+        
+        </div>
+        <div class="absolute textbox">
+            <h2>Capture and Share the World's Moments</h2>
+            <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>  
+            <p>
+                Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            </p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <div id="distribuciones">
+                <img id="iphone" src="images/badge-iphone.png" alt="">
+                <img id="android" src="images/badge-android.png" alt="">
+            </div>  
+        </div>
+        <div class="footer">
+            <table id="tableFooter">
+                <th><td>About Us</td></th>       
+                <th><td>Support</td></th>
+                <th><td>Blog</td></th>
+                <th><td>Press</td></th>
+                <th><td>API</td></th>
+                <th><td>Jobs</td></th>
+                <th><td>Privacy</td></th>
+                <th><td>Terms</td></th>
+                <th><td><font color="#C0C0C0">&copy; 2014 Instagram</font></td></th>
+            </table>
+        </div>
+    </div>
 </body>
 </html>
