--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,56 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <section>
+    <div class="float left">
+      <img src="images/phones.png" alt="phone" class="phone">
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="float right">
+      <div class="wrapper">
+        <img src="images/brand.png" alt="insta">
+        <a class="btn">
+          <img class="home" src="images/home.png" alt="home"><small>Log in</small>
+        </a>
+      </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <div class="wrapper2">
+        <h2>Capture and Share the World's Moments</h2>
 
-  Oh yeah, did we mention it's free?
+        <p>
+          Instagram is a <span>fast</span>, <span>fast</span> and <span>fast</span> way to share your life with friends and family.<br>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+          Oh yeah, did we mention it's free?
+        </p>
+        <div class="images">
+          <img src="images/badge-iphone.png" alt="image1" class="float imagePhone">
+          <img src="images/badge-android.png" alt="image2" class="float imagePhone">
+          <div class="clearfix">
 
-  Download on the App Store
-  Get it on Google Play
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="clearfix"></div>
+  </section>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <footer>
+    <ul>
+      <li> About Us</li>
+      <li> Support</li>
+      <li> Blog</li>
+      <li> Press</li>
+      <li> API</li>
+      <li> Privacy</li>
+      <li> Terms</li>
+      <li>  &copy; 2014 Instagram </li>
+    </ul>
+  </footer>
 
-  &copy; 2014 Instagram
+  <div class="overlay"></div>
 </body>
 </html>
