imagenes linkeadas en HTML

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,8 +2,15 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
+  <img src="images/phones.png">
+  <img src="images/brand.png">
+  <img src="images/home.png">
+  <img src="images/frame.png">
+  <img src="images/badge-iphone.png">
+  <img src="images/badge-android.png">
   Instagram
 
   Capture and Share the World's Moments
