instagram casi terminado,  pocos detalles por resolver

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,37 +2,41 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
-  <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  <img src="images/phones.png">
-  <img src="images/brand.png">
-  <img src="images/home.png">
-  <img src="images/frame.png">
-  <img src="images/badge-iphone.png">
-  <img src="images/badge-android.png">
-  Instagram
+  <div class="main-background">
+    <div class="central-content">
+      <img src="images/phones.png" class="phones">
+      <img src="images/brand.png" class="brand">
+      <button><img src="images/home.png">Log in</button>
+      <img src="images/frame.png"class="frame" >
+      <img src="images/badge-iphone.png" class="badge-iphone" >
+      <img src="images/badge-android.png" class="badge-android">
+    </div>
+    <div class="article">
+  <h1>Capture and Share <br>the World's Moments</h1>
 
-  Capture and Share the World's Moments
+  <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.</p>
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <p>Oh yeah, did we mention it's free?</p>
+  </div>
+  </div>
+  
+  <nav class="footer">
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li id="register">&copy; 2014 Instagram</li>
+    </ul>
+  </nav>
+  
 </body>
 </html>
