--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -3,29 +3,71 @@
 <head>
   <title>Instagram</title>
 </head>
-<body>
-  Instagram
+<body style="margin: 0;">
+  
 
-  Capture and Share the World's Moments
+  <header style="background-color:#51799c; height: 300px; width:100%; margin:left 10%;">
+    <div style="text-align:left;  display:inline-block; margin-left: 100px; margin-top: 110px;">
+      <img src="images/phones.png" alt="">
+    </div>
+    <div style="text-align:right; vertical-align: top; display:inline-block; margin-top: 150px; margin-left: 55px;">
+      <img src="images/brand.png" alt=""/>
+    </div>
+    <div style="text-align:right; vertical-align: top; display:inline-block; margin-top: 177px; margin-left: 55px;">
+      <img src="images/home.png" alt=""/>
+        <div style="display:inline-block; vertical-align: center; font-family: 'Helvetica Neue'; border-">
+          <p>Log in</p>
+        </div>
+    </div>
+  </header>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div style="border: 1px solid white;width: 445px;text-align: left;margin-left: 482px;margin-top: -55px;background-color: white; border-radius: 7px;">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div>
+    <p style="font-family:'Helvetica Neue';color:#214466;font-weight: 600;font-size: 26px;line-height: 38px;">Capture and Share the World's Moments</p>
+  </div>
 
-  Oh yeah, did we mention it's free?
+  <div style="margin-top: 10px;font-family:'Helvetica Neue';">
+    <div>
+      <p style="line-height:30px;">Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Download on the App Store
-  Get it on Google Play
+      <p style="line-height:30px;">
+      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      </p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <p style="line-height:30px;">
+      Oh yeah, did we mention it's free?
+      </p>
+    </div>
+    <div>
+    <div>
+      <img src="images/badge-iphone.png" alt="">
+    </div>
+    <div>
+      <img src="images/badge-android.png" alt="">
+    </div>
+  </div>
+    
+  </div>
 
-  &copy; 2014 Instagram
+</div>
+
+
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+    </ul>
+    <span>
+      &copy; 2014 Instagram
+    </span>
+  </footer>
+
 </body>
 </html>
