--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,9 +2,20 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="../starter-code/css/main.css">
 </head>
+  
+
 <body>
-  Instagram
+    <header>
+        <div class="hero">
+            <div class="name-insta">
+                <img src="../starter-code/images/brand.png" alt="Instagram">
+                <a href="#" class="button">Log in</a>
+            </div>    
+        </div>
+       
+    </header>
 
   Capture and Share the World's Moments
 
