--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,53 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+
+ <link rel="stylesheet" type="text/css" href="./css/main.css">
+
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  
+ <div class="containercon">
+<div class="instagramcon">
+<img src="./images/phones.png">
+<div class="instagram-main-content">
+<div>
+<div class="headercon">
+<img src="./images/brand.png">
+<button class="buttonlog">
+<img src="./images/home.png">
+<span>Log in</span>
+</button>
+</div>
+<div class="maincon">
+<h3>Capture and Share the World's Moments</h3>
+<p>Instagram is a
+<b>fast</b>,
+<b>beautiful</b> and
+<b>fun</b> way to share your life with friends and family.</p>
+<p>Take a picture or video, choose a filt∫er to transform its look and feel, then post to Instagram &mdash; it's
+that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+<p>Oh yeah, did we mention it's free?</p>
+<div class="shops">
+<button class="buttonios"></button>
+<button class="buttongo"></button>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="footer">
+<a href="">About Us</a>
+<a href="">Support</a>
+<a href="">Blog</a>
+<a href="">Press</a>
+<a href="">API</a>
+<a href="">Jobs</a>
+<a href="">Privacy</a>
+<a href="">Terms</a>
+ &copy; 2014 Instagram
+ </div>
+ </div>
 </body>
 </html>
+
