--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,58 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <main class="clearfix wrapper">
+    <section class="column-6">
+      <img src="images/phones.png" alt="phones image">
+    </section>
+    <section>
+      <header>
+        <img src="images/brand.png" alt="Instagram">
+        <button class="login-button">
+          <img src="images/home.png" alt="Log in">
+          Log in</button>
+      </header>
+      <article id="main-content" class="column-6">
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
 
-  Capture and Share the World's Moments
+        <div class="downloads-container">
+          <a href="#"><img src="images/badge-iphone.png" alt="Download on the App Store"></a>
+          <a href="#"><img src="images/badge-android.png" alt="Get it on Google Play"></a>
+        </div>
+      </article>
+    </section>
+  </main>
+  <footer class="wrapper">
+    <nav>
+      <ul class="clearfix">
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </nav>
+  </footer>
+  
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  
+  
+  
+  
+  
+  
+  
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  
 </body>
 </html>
