--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,43 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div>
+      <img src="images/phones.png" alt="phones" class="phones">
+  </div>
+  <section>
+      <div class="login">
+          <img src="img/../images/brand.png" alt="Instagram" class="instagram">
+          <button type="button"><img src="img/../images/home.png">Log in</button>
+      </div>
+      
+        <div class="description">
+            <h1>Capture and Share<br> the World's Moments</h1>
+            <p>Instagram is a <strong> fast, beautiful </strong> and <strong>fun</strong>  way to share your life with friends and family.</p>
+            <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+        </div>
+     
+    <div class="logos">
+      <img src="img/../images/badge-iphone.png" alt="iphone">
+      <img src="img/../images/badge-android.png" alt="android">
+    </div>    
+  </section>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <footer>
+    <ul>
+      <li>About</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li class="copyright">&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 </body>
 </html>
