add structure and style

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="css/main.css">
+  </head>
+  <body>
 
-  Capture and Share the World's Moments
+    <div class="main-content">
+      <section class="section-left">
+        <img src="images/phones.png" alt="">
+      </section>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <section class="section-right">
+        <div>
+          <img src="images/brand.png" alt="">
+          <button class="home">
+            <img src="images/home.png" alt="">
+            <span>Login</span>
+          </button>
+        </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <div class="text-box">
+          <h1>Capture and Share
+            <br>the World's Moments
+          </h1>
 
-  Oh yeah, did we mention it's free?
+          <p>Instagram is a
+            <b>fast</b>,
+            <b>beautiful</b> and
+            <b>fun</b> way to share your life with friends and family.</p>
 
-  Download on the App Store
-  Get it on Google Play
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy.
+            You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+          <p>Oh yeah, did we mention it's free?</p>
 
-  &copy; 2014 Instagram
-</body>
+          <a href="#">
+            <img src="images/badge-iphone.png" alt="Download on the App Store">
+          </a>
+          <a href="#">
+            <img src="images/badge-android.png" alt="Get it on Google Play">
+          </a>
+        </div>
+
+      </section>
+    </div>
+
+    <div class="clear"></div>
+
+    <div class="footer">
+      <ul>
+        <li>
+          <a href="">ABOUT US</a>
+        </li>
+        <li>
+          <a href="">SUPPORT</a>
+        </li>
+        <li>
+          <a href="">BLOG</a>
+        </li>
+        <li>
+          <a href="">PRESS</a>
+        </li>
+        <li>
+          <a href="">API</a>
+        </li>
+        <li>
+          <a href="">JOBS</a>
+        </li>
+        <li>
+          <a href="">PRIVACY</a>
+        </li>
+        <li>
+          <a href="">TERMS</a>
+        </li>
+      </ul>
+    </div>
+
+
+    <!-- &copy; 2014 Instagram -->
+  </body>
 </html>
