--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,37 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel = "stylesheet" href = "css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <header>
+    <div class="background-color"></div>
+    <img class="background-img" src="images/phones.png" alt="Phones"></img>
+  </header>
+  <div class="container">
+    <div class = "log-in">
+      <img class="brand" src="images/brand.png" alt="Instagram">
+      <button type class="button1"submit><img src="images/home.png" alt="Log in">Log in</button>
+    </div>
+    <div class = "text">
+      <h2>Capture and Share the World's Moments</h2>
+      <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        Oh yeah, did we mention it's free?</p>
+      <a class="padding-left-30" href="#"><img src="images/badge-iphone.png" alt="App Store" ></img></a>
+      <a href="#"><img src="images/badge-android.png" alt="App Store" ></img></a>
+    </div>
+  </div>
+  <footer>
+    <a href="#">About Us</a>
+    <a href="#">Support</a> 
+    <a href="#">Blog</a> 
+    <a href="#">Press</a> 
+    <a href="#">API</a> 
+    <a href="#">Jobs</a> 
+    <a href="#">Privacy</a> 
+    <a href="#">Terms</a>  
+    <span class="copy">&copy; 2014 Instagram</span>
+  </footer>
 </body>
 </html>
