--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,58 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<div class="blue-background"></div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<div class="container"> 
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div class="left-sight">
+    <img src ="images/phones.png" alt ="iphones">
+  </div>
 
-  Oh yeah, did we mention it's free?
+  <div class="right-sight">
+    <div>
+      <img src = "images/brand.png" alt = "brand logo" class = "brand-foto">
+      <button class = "login-button"><img src = "images/home.png" alt = "home logo" class = "home-foto">Log in</button>
+    </div>
 
-  Download on the App Store
-  Get it on Google Play
+    <div class="frame">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+         <h1>Capture and Share <br> the World's Moments</h1>
 
-  &copy; 2014 Instagram
+         <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.</p>
+
+         <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+         <p>Oh yeah, did we mention it's free?</p>
+
+      <div class= "badge">
+          <a href="#"><img src="images/badge-iphone.png" alt="badge-iphone" class= "badge-iphone"></a>
+          <a href="#"><img src="images/badge-android.png" alt="badge-android" class="badge-androind"></a>
+      </div>
+    </div>
+  </div>
+
+  <div class="clear"></div>
+
+  <footer>
+    <ul>
+      <li><a href= "#">About Us</a></li>
+      <li><a hrfef = "#">Support</a></li>
+      <li><a hrfef = "#">Blogg</a></li>
+      <li><a hrfef = "#">Press</a></li>
+      <li><a hrfef = "#">API</a></li>
+      <li><a hrfef = "#">Jobs</a></li>
+      <li><a hrfef = "#">Privacy</a></li>
+      <li><a hrfef = "#">Terms</a></li>
+    </ul>
+  <span class= "copyright">&copy; 2014 Instagram </span>
+  
+  </footer>
+</div>
+
 </body>
 </html>
