--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,39 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <section id="top"></section>
+  <main>
+    <img src="images/phones.png" alt="">
+    <section>
+      <aside>
+          <img src="images/brand.png" alt="">
+          <button><a style="text-decoration:none" href="#"><img src="images/home.png" alt=""><span style="color:#fff"> Log in</span></a></button>
+      </aside>
+      <div>
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b>way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+      	<a href="#"><img src="images/badge-iphone.png" alt="instagram-for-iphone"></a> 
+        <a href="#"><img src="images/badge-android.png" alt="instagram-for-android"></a> 
+      </div>
+    </section>
+  </main>
+  <footer>
+    <ul>
+      <li><a style="text-decoration:none" href="#" ><span style="color: #1c5380">About Us</span></a></li>
+      <li><a style="text-decoration:none" href="#" ><span style="color: #1c5380">Support</span></a></li>
+      <li><a style="text-decoration:none" href="#" ><span style="color: #1c5380">Blog</span></a></li>
+      <li><a style="text-decoration:none" href="#" ><span style="color: #1c5380">Press</span></a></li>
+      <li><a style="text-decoration:none" href="#" ><span style="color: #1c5380">API</span></a></li>
+      <li><a style="text-decoration:none" href="#" ><span style="color: #1c5380">Jobs</span></a></li>
+      <li><a style="text-decoration:none" href="#" ><span style="color: #1c5380">Privacy</span></a></li>
+      <li><a style="text-decoration:none" href="#" ><span style="color: #1c5380">Terms</span></a> </li>
+      <li><span style="color: #958b8b;">&copy; 2014 Instagram</span></li>
+    </ul>
+  </footer>
 </body>
 </html>
