--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -6,32 +6,32 @@
 </head>
 <body>
   <header>
-    <div class="background-color"></div>
-    <img class="background-img" src="images/phones.png" alt="Phones"></img>
+    <div class="background background-color position-absolute"></div>
+    <img class="float position-relative height-400 margin-top-60 margin-left-250 margin-right-60" src="images/phones.png" alt="Phones"></img>
   </header>
-  <div class="container">
-    <div class = "log-in">
-      <img class="brand" src="images/brand.png" alt="Instagram">
-      <button type class="button1"submit><img src="images/home.png" alt="Log in">Log in</button>
+  <div class="container float position-relative height-400 margin-top-60">
+    <div class = "log-in height-100">
+      <img class="brand padding-0 height-70" src="images/brand.png" alt="Instagram">
+      <button type class="button1 background-color height-40 margin-left-60"submit><img src="images/home.png" alt="Log in">Log in</button>
     </div>
-    <div class = "text">
-      <h2>Capture and Share the World's Moments</h2>
-      <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
+    <div class = "text padding-0 height-200">
+      <h2 class="text-color padding-left-30 margin-0;">Capture and Share the World's Moments</h2>
+      <p class="padding-left-30">Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
         Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
         Oh yeah, did we mention it's free?</p>
-      <a class="padding-left-30" href="#"><img src="images/badge-iphone.png" alt="App Store" ></img></a>
-      <a href="#"><img src="images/badge-android.png" alt="App Store" ></img></a>
+      <a class="padding-left-30" href="#"><img class="height-40" src="images/badge-iphone.png" alt="App Store" ></img></a>
+      <a href="#"><img class="height-40" src="images/badge-android.png" alt="App Store" ></img></a>
     </div>
   </div>
   <footer>
-    <a href="#">About Us</a>
-    <a href="#">Support</a> 
-    <a href="#">Blog</a> 
-    <a href="#">Press</a> 
-    <a href="#">API</a> 
-    <a href="#">Jobs</a> 
-    <a href="#">Privacy</a> 
-    <a href="#">Terms</a>  
+    <a class="text-color" href="#">About Us</a>
+    <a class="text-color" href="#">Support</a> 
+    <a class="text-color" href="#">Blog</a> 
+    <a class="text-color" href="#">Press</a> 
+    <a class="text-color" href="#">API</a> 
+    <a class="text-color" href="#">Jobs</a> 
+    <a class="text-color" href="#">Privacy</a> 
+    <a class="text-color"href="#">Terms</a>  
     <span class="copy">&copy; 2014 Instagram</span>
   </footer>
 </body>
