--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,43 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <main>
+    <figure class="phones">
+      <img src="images/phones.png" alt="phones">
+    </figure>
+    <div class="right">
+      <div class="upper">
+        <img src="images/brand.png" alt="brand instagram">
+        <div class="button"><img src="images/home.png" alt="home" class="image-button"><span class="text-button">Log in</span></div>
+      </div>
+      <div class="lower">
+        <h2>Capture and Share<br> the World's Moments</h2>
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <div class="downloads">
+            <img src="images/badge-iphone.png" alt="download on the App Store" class="apple">
+            <img src="images/badge-android.png" alt="get it on Google Play" class="android">
+        </div>
+        <img src="images/frame.png" alt="frame" class="frame">
+      </div>
+    </div>
+  </main>
+  <footer>
+    <ul class="menu">
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li class="copyright">&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 </body>
 </html>
