--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <link rel="stylesheet" href="./css/main.css">
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+  <header>
+    <nav>
 
-  Capture and Share the World's Moments
+    </nav>
+  </header>
+  <section>
+    <aside>
+      <img src="./images/phones.png" alt="">
+    </aside>
+    <article>
+      <div class="brand">
+         <img src="./images/brand.png" alt="Instagram">
+        <button >Login</button>
+      </div>
+      <h1>Instagram Capture and Share the World's Moments</h1>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+      Instagram is a fast, beautiful and fun way to share your life with friends and family. Take a picture or video, choose a
+      filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook,
+      Twitter, Tumblr and more. It's a new way to see the world. Oh yeah, did we mention it's free? Download on the App Store
+      Get it on Google Play
+    </article>
+  </section>
+  <footer>
+    <ul>
+      <li> About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li id="copyright">&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 </body>
+
 </html>
