--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -14,19 +14,21 @@
   </header>
   <section>
     <aside>
-      <img src="./images/phones.png" alt="">
+      <img src="./images/phones.png" alt="telephone">
     </aside>
     <article>
       <div class="brand">
-         <img src="./images/brand.png" alt="Instagram">
-        <button >Login</button>
+         <img class="brand" src="./images/brand.png" alt="Instagram">
+        <button class="brand" >Login</button>
       </div>
-      <h1>Instagram Capture and Share the World's Moments</h1>
-
-      Instagram is a fast, beautiful and fun way to share your life with friends and family. Take a picture or video, choose a
-      filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook,
-      Twitter, Tumblr and more. It's a new way to see the world. Oh yeah, did we mention it's free? Download on the App Store
-      Get it on Google Play
+      <div class="promo">
+        <h1>Instagram Capture and Share the World's Moments</h1>
+        <p>
+        Instagram is a <bold>fast</bold>, beautiful and fun way to share your life with friends and family. Take a picture or video, choose a
+        filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook,
+        Twitter, Tumblr and more. It's a new way to see the world. Oh yeah, did we mention it's free? Download on the App Store
+        Get it on Google Play </p>
+      </div>
     </article>
   </section>
   <footer>
@@ -39,7 +41,7 @@
       <li>Jobs</li>
       <li>Privacy</li>
       <li>Terms</li>
-      <li id="copyright">&copy; 2014 Instagram</li>
+      <p id="copyright"> &copy; 2014 Instagram</p>
     </ul>
   </footer>
 </body>
