--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -47,7 +47,7 @@
       <li>Jobs</li>
       <li>Privacy</li>
       <li>Terms</li>
-      <li class="info">&copy; 2014 Instagram<</li>
+      <li class="info">&copy; 2014 Instagram</li>
     </ul>
     
   </footer>
