--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,15 +2,13 @@
 <html lang="en">
 
 <head>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link rel="stylesheet" href="./css/main.css">
   <title>Instagram</title>
 </head>
 
 <body>
   <header>
-    <nav>
-
-    </nav>
   </header>
   <section>
     <aside>
@@ -18,32 +16,38 @@
     </aside>
     <article>
       <div class="brand">
-         <img class="brand" src="./images/brand.png" alt="Instagram">
-        <button class="brand" >Login</button>
+        <img class="imageBrand" src="./images/brand.png" alt="Instagram">
+        <button class="buttonBrand">Log in</button>
       </div>
       <div class="promo">
-        <h1>Instagram Capture and Share the World's Moments</h1>
+        <h1>Capture and Share the World's Moments</h1>
         <p>
-        Instagram is a <bold>fast</bold>, beautiful and fun way to share your life with friends and family. Take a picture or video, choose a
-        filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook,
-        Twitter, Tumblr and more. It's a new way to see the world. Oh yeah, did we mention it's free? Download on the App Store
-        Get it on Google Play </p>
+          Instagram is a
+          fast, beautiful and fun way to share your life with friends and family. Take a picture or video, choose
+          a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook,
+          Twitter, Tumblr and more. It's a new way to see the world. Oh yeah, did we mention it's free? Download on the App
+          Store Get it on Google Play 
+        
+        </p>
       </div>
+      <img class="store" src="./images/badge-iphone.png" alt="Apple Store">
+      <img class="store" src="./images/badge-android.png" alt="Google play">
     </article>
+    <footer>
+      <ul>
+        <li> About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <p id="copyright"> &copy; 2014 Instagram</p>
+      </ul>
+    </footer>
   </section>
-  <footer>
-    <ul>
-      <li> About Us</li>
-      <li>Support</li>
-      <li>Blog</li>
-      <li>Press</li>
-      <li>API</li>
-      <li>Jobs</li>
-      <li>Privacy</li>
-      <li>Terms</li>
-      <p id="copyright"> &copy; 2014 Instagram</p>
-    </ul>
-  </footer>
+
 </body>
 
 </html>
