--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -23,11 +23,11 @@
         <h1>Capture and Share the World's Moments</h1>
         <p>
           Instagram is a
-          fast, beautiful and fun way to share your life with friends and family. Take a picture or video, choose
-          a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook,
-          Twitter, Tumblr and more. It's a new way to see the world. Oh yeah, did we mention it's free? Download on the App
-          Store Get it on Google Play 
-        
+          <strong>fast, beautiful</strong> and
+          <strong>fun</strong> way to share your life with friends and family. Take a picture or video, choose a filter to transform
+          its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr
+          and more. It's a new way to see the world. Oh yeah, did we mention it's free? Download on the App Store Get it
+          on Google Play
         </p>
       </div>
       <img class="store" src="./images/badge-iphone.png" alt="Apple Store">
@@ -35,7 +35,7 @@
     </article>
     <footer>
       <ul>
-        <li> About Us</li>
+        <li>About Us</li>
         <li>Support</li>
         <li>Blog</li>
         <li>Press</li>
@@ -43,8 +43,9 @@
         <li>Jobs</li>
         <li>Privacy</li>
         <li>Terms</li>
-        <p id="copyright"> &copy; 2014 Instagram</p>
+        <li id="copyright"> &copy; 2014 Instagram</li>
       </ul>
+
     </footer>
   </section>
 
