--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/normalize.css">
+  <link rel="stylesheet" href="./css/main.css">
 </head>
-<body>
-  Instagram
+  <body>
+    <div class="container">
 
-  Capture and Share the World's Moments
+      <div class="content hcenter">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <div class="main-image">
+          <img src="./images/phones.png" alt="iOS and Android smartphones">
+        </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <div class="content-right">
+          <div class="header">
+            <img src="./images/brand.png" alt="Instagram logo">
+            <button class="log-in-btn">
+              <img src="./images/home.png" alt="home icon" class="home-icon">
+              <span>Log in</span>
+            </button>
+          </div>
+          <div class="text-box">
+            <h2>Capture and Share the World's Moments</h2>
+            <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
 
-  Oh yeah, did we mention it's free?
+            <div>
+              <a href="https://itunes.apple.com/app/instagram/id389801252?pt=428156&ct=igweb.signupPage.badge&mt=8" class="store"><img src="./images/badge-iphone.png" alt="Download on the App Store"></a>
+              <a href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DsignupPage%26utm_medium%3Dbadge" class="store"><img src="./images/badge-android.png" alt="Get it on Google Play"></a>
+            </div>
+          </div>
+        </div>
+      </div>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+      <div class="clearfix"></div>
+      <footer>
+        <ul>
+          <li><a href="https://www.instagram.com/about/us/">About Us</a></li>
+          <li><a href="https://help.instagram.com/">Support</a></li>
+          <li><a href="http://blog.instagram.com/">Blog</a></li>
+          <li><a href="https://instagram-press.com/">Press</a></li>
+          <li><a href="https://www.instagram.com/developer/">API</a></li>
+          <li><a href="https://www.instagram.com/about/jobs/">Jobs</a></li>
+          <li><a href="https://www.instagram.com/legal/privacy/">Privacy</a></li>
+          <li><a href="https://www.instagram.com/legal/terms/">Terms</a></li>
+          <li>&copy; 2014 Instagram</li>
+        </ul>
+      </footer>
+    </div>
+  </body>
 </html>
