--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
+  <html lang="en"></html>
+  <meta charset="utf-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Instagram</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Normalize.css: resets default browser styles -->
+  <link rel="stylesheet" href="../starter-code/css/normalize.css">
+  <link rel="stylesheet" type="text/css" media="screen" href="../starter-code/css/main.css" />
+  <script src=""></script>
 </head>
+
 <body>
-  Instagram
+    <div class="content"> <!-- the big box -->
 
-  Capture and Share the World's Moments
+      <section class="section-left"> <!-- left section -->
+        <img src="images/phones.png" alt="instagram-sample">
+      </section>
+  
+      <section class="section-right"> <!-- right section -->
+        <nav>
+          <img src="images/brand.png" alt="instagram-photo">
+          <button class="log-in-button"> <!-- button -->
+            <img src="images/home.png" alt="home-logo"><a href="https://www.instagram.com/accounts/login/?hl=es">Log in</a>
+          </button>
+        </nav>
+  
+        <article> <!-- information -->
+          <h2>Capture and Share<br>the World's Moments</h2>
+          <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+  
+          <a href="https://itunes.apple.com/es/app/instagram/id389801252?mt=8"><img src="images/badge-iphone.png" alt="App Store"></a>
+          <a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=es"><img src="images/badge-android.png" alt="Google Play"></a>
+        </article>
+      </section>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
-</html>
+    </div>
+  
+    <footer> <!-- footer -->
+      <ul class="clear">
+        <li><a href="https://www.instagram.com/about/us/">About Us</a></li>
+        <li><a href="https://help.instagram.com/">Support</a></li>
+        <li><a href="http://blog.instagram.com/">Blog</a></li>
+        <li><a href="https://instagram-press.com/">Press</a></li>
+        <li><a href="https://www.instagram.com/developer/">API</a></li>
+        <li><a href="https://www.instagram.com/about/jobs/">Jobs</a></li>
+        <li><a href="https://www.instagram.com/legal/privacy/">Privacy</a></li>
+        <li><a href="https://www.instagram.com/legal/terms/">Terms</a></li>
+        <li>&copy; 2018 Instagram</li>
+      </ul>
+    </footer>
+  
+  </body>
+  </html>
+  
