--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+ <head>
+   <title>Instagram</title>
++  <link rel="stylesheet" type="text/css" href="./css/main.css">
+ </head>
+ <body>
 
-  Capture and Share the World's Moments
+ <div class="content">
+ 
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="header-blue">
+      <img src="./images/bgtile.png">
+    </div>
+ 
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="col-left">
+        <img src="./images/phones.png">
+    </div>
+ 
+    <div class="col-right">
+      <div class="col-right-header">
+        <img src="./images/brand.png">
+        <button>
+          <img src="./images/home.png">
+         <span>Log in</span>
+        </button>
+      </div>
+      <div class="col-right-body">
+        <b class="title">Capture and Share<br> the World's Moments</b>
+        <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
+      <img src="./images/badge-iphone.png" class="download-app">
+      <img src="./images/badge-android.png" class="download-app">
+    </div>
+  </div>
+ 
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
-</html>
+  <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+  </footer>
+ </body>
+ </html>
