--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,42 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main2.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <section class="background"></section>
+    <section class="general">
+        <div class="phone">
+            <img src="images/phones.png">
+        </div>
+        <div class="right">
+            <div class="logo-nav-bar">
+                <img src="images/brand.png">
+                <button class="login">Log in</button>
+            </div>
+            <div class="introduction">
+                <div class="description">
+                    <h1>Capture and Share the World's Moments</h1>
+                    <p>Instagram is a fast, beautiful and fun way to share your life with friends and family</p>
+                    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+                    <p>Oh yeah, did we mention it's free?</p>
+                </div>
+                <div>
+                    <img src="images/badge-iphone.png">
+                    <img src="images/badge-android.png">
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+            <span>about us</span>
+            <span>Support</span>
+            <span>blog</span>
+            <span>Press</span>
+            <span>api</span>
+            <span>jobs</span>
+            <span>Privacy</span>
+            <span>Terms</span>
+            <span>&copy; 2014 Instagram</span>
+    </footer>
 </body>
-</html>
