--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,61 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <section id="page">
+    <div class="upper-part">
+      <div class="phone-img">
+        <img src="images/phones.png" alt="phone-img">
+      </div>
+      <div class="right-area">
 
-  Capture and Share the World's Moments
+        <div class="brand-logo-button">
+          <img src="images/brand.png" alt="instagram-brand">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          <div class="login-btn">
+            <img src="images/home.png" alt="house">
+            <a href="#">Log in</a>
+          </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+        </div>
+        <div class="text-content">
+          <h1>
+            Capture and Share <br>the World's Moments
+          </h1>
+          <p>
+            Instagram is a fast, beautiful and fun way to share your life <br>
+            with friends and family. <br><br>
+            
+            Take a picture or video, choose a filter to transform its look <br>
+            and feel, then post to Instagram &mdash; it's that easy. You can <br>
+            even share to Facebook, Twitter, Tumblr and more. It's <br>
+            a new way to see the world.
+            <br> <br>
+            Oh yeah, did we mention it's free?
+          </p>
+        </div>
+        <div class="store">
+          <img class="store-img" src="images/badge-iphone.png" alt="iphone-store-logo">
+          <img class="store-img" src="images/badge-android.png" alt="android-store-logo">
+        </div>
+      </div>
+    </div>
+    
+    <footer class="site-links">
+      <ul class="footer-ul">
+        <li class="footer-li"><a href="#">About Us</a></li>
+        <li class="footer-li"><a href="#">Support</a></li>
+        <li class="footer-li"><a href="#">Blog</a></li>
+        <li class="footer-li"><a href="#">Press</a></li>
+        <li class="footer-li"><a href="#">API</a></li>
+        <li class="footer-li"><a href="#">Jobs</a></li>
+        <li class="footer-li"><a href="#">Privacy</a></li>
+        <li class="footer-li"><a href="#">Terms</a></li>
+        <li id="copyright" class="footer-li">&copy;2014 Instagram</li>
+      </ul>
+    </footer>
+  </section>
 </body>
 </html>
