--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,28 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
+  <div class="header"></div>
+  <div class="container">
+  <img src="images/phones.png" alt="phones" class="phones">
+  <img src="images/brand.png" alt="brand-name" class="brand-name">
+  <div class="frame">
+    <h2>Capture and Share the World's Moments</h2>
+    <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.<br>
+    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+    Oh yeah, did we mention it's free?</p>
+    <div class="center">
+        <img src="images/badge-iphone.png" alt="badge-iphone" class="badge-iphone">
+        <img src="images/badge-android.png" alt="badge-android" class="badge-android">
+    </div>
+  </div>
+</div>
+<div class="clearfix "></div>
+<footer class="footer">
+  <span class="bolder">ABOUT US SUPPORT BLOG PRESS API JOBS PRIVACY TERMS</span>
   &copy; 2014 Instagram
+</footer>
 </body>
 </html>
