--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
-  <link rel="stylesheet" href="~/../css/main.css">
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 
 
@@ -41,15 +41,15 @@
     <div class="footer">
         <table align="center">
           <tr>
-          <td>About Us</td>
-          <td>Support</td>
-          <td>Blog</td>
-          <td>Press</td>
-          <td>API</td>
-          <td>Jobs</td>
-          <td>Privacy</td>
-          <td>Terms</td>
-          <td><font color="grey">&copy; 2014 Instagram</font></td>
+          <td style="padding-right:9px">About Us</td>
+          <td style="padding-right:9px">Support</td>
+          <td style="padding-right:9px">Blog</td>
+          <td style="padding-right:9px">Press</td>
+          <td style="padding-right:9px">API</td>
+          <td style="padding-right:9px">Jobs</td>
+          <td style="padding-right:9px">Privacy</td>
+          <td style="padding-right:9px">Terms</td>
+          <td style="padding-right:9px"><font color="grey">&copy; 2014 Instagram</font></td>
           </tr>
         </table>  
           
