--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,48 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="wrapper">
+    <img class="left" src="images/phones.png" alt="">  
+  
+    <div class="right">
+      <div class="header">
+        <h1><img src="images/brand.png" alt="Instagram"></h1>
+        <button><img src="images/home.png">Log in</button>
+      </div>
+      <div class="frame">
+        <h2>Capture and Share<br>the World's Moments</h2>
+        <p>
+          Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        </p>
+        <p>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+        <p>
+          Oh yeah, did we mention it's free?
+        </p>
+        <a href="#"><img src="images/badge-iphone.png" alt="Download on the App Store"></a>
+        <a href="#"><img src="images/badge-android.png" alt="Get it on Google Play"></a>
+      </div>
+    </div>
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <footer>
+    <ul>
+      <a href="#"><li>About Us</li></a>
+      <a href="#"><li>Support</li></a>
+      <a href="#"><li>Blog</li></a>
+      <a href="#"><li>Press</li></a>
+      <a href="#"><li>API</li></a>
+      <a href="#"><li>Jobs</li></a>
+      <a href="#"><li>Privacy</li></a>
+      <a href="#"><li>Terms</li></a>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
